--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "localforage": "^1.7.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   }
